--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@ font-weight: 700;
 .head-title2{
     font-size: 48px;
 }
-.banner-ds{
+.banner-text p{
     color: #534C64;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 500;
-    line-height: normal;
+    line-height: 2px;
     margin-bottom: 30px;
 }
 .btn1{
@@ -180,6 +180,35 @@ font-weight: 700;
     left: 170px;
     top: 70px;
 }
+
+/* section 4 start */
+
+.gamer-container{
+    width: 1920px;
+    height: 400px;
+    display: grid;
+   grid-template-columns: repeat(5, 190px);
+   grid-template-rows: repeat(4, 90px);
+   justify-content: center;
+   align-items: center;
+   gap: 3rem;
+   margin-top: 130px;
+   margin-left: auto;
+   margin-right: auto;
+   
+
+    
+}
+.gamer-container .button{
+
+     display: flex;
+     align-items: center;
+     line-height: normal;
+     font-size: 15px;
+}
+
+
+
 
 
 
